Fixed padding to make it in a straight line and also made components benefits, and relative square blocks function correctly on mobile and big screen

--- a/src/components/ChefCards/ChefCards.scss
+++ b/src/components/ChefCards/ChefCards.scss
@@ -17,12 +17,13 @@
 }
 
 .chef-card-container-grid {
+  width: 100%;
   background-color: $black;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: stretch;
-  padding: 30px;
+  padding: 30px 0;
   gap: 12px;
 
   .chef-card {
