--- a/src/components/ForEveryOccasion/ForEveryOccasion.scss
+++ b/src/components/ForEveryOccasion/ForEveryOccasion.scss
@@ -1,13 +1,12 @@
 .for-every-occasion-container {
   width: 100%;
   height: 100%;
-
+  margin: 0;
+  padding: 0;
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
-
-  gap: 66px;
-
   background-color: $light-black;
   color: $white;
 
@@ -19,5 +18,12 @@
     }
     margin-top: 77px;
     margin-bottom: 49px;
+  }
+
+  @media (max-width: $breakpoint-md) {
+    justify-content: center;
+  }
+  @media (max-width: $breakpoint-lg) {
+    font-size: 56px;
   }
 }
