--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -38,7 +38,6 @@
   }
 }
 
-
 .modal-btn {
   background-color: $gold;
   height: 37px;
@@ -50,7 +49,7 @@
   cursor: pointer;
   display: flex;
   margin-left: 40px;
-  font: bold 14px 'Poppins';
+  font: bold 14px "Poppins";
 
   @media (max-width: $breakpoint-sm) {
     margin-left: 14px;
